--- a/misc/pvclaim.yaml
+++ b/misc/pvclaim.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: task-pv-claim
+  name: pvc-autodock
 spec:
   storageClassName: manual
   accessModes:
