ported to other CPU architectures
updated Dockerfiles: CPU-only (PoCL), Intel CPU, Nvidia GPU
updated DAGs for more resilience

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM nvidia/cuda:11.2.0-devel-ubuntu20.04 AS builder
+FROM nvidia/cuda:12.5.0-devel-ubuntu22.04 AS builder
 WORKDIR /autodock/
 RUN apt-get update && apt-get install -y wget
 
@@ -14,18 +14,18 @@ RUN \
     && GPU_LIBRARY_PATH=/usr/local/cuda/lib64 GPU_INCLUDE_PATH=/usr/local/cuda/include make DEVICE=GPU NUMWI=64
 
 
-FROM nvidia/cuda:11.2.0-runtime-ubuntu20.04
-RUN apt-get update && apt-get install -y wget openbabel
+FROM nvidia/cuda:12.5.0-runtime-ubuntu22.04
+RUN apt-get update && apt-get install -y wget openbabel autogrid
+
+# download and install mgltools
+WORKDIR /autodock/mgltools/
+ADD https://ccsb.scripps.edu/mgltools/download/491/ ./mgltools.tar.gz
+RUN \
+     tar xzOf mgltools.tar.gz mgltools_x86_64Linux2_1.5.7/MGLToolsPckgs.tar.gz | tar xz \
+     && rm mgltools.tar.gz
+
 WORKDIR /autodock/
 COPY --from=builder /autodock/AutoDock-GPU-1.5.3/bin/autodock_gpu_64wi ./autodock_gpu
 COPY --from=builder /autodock/x86_64Linux2/autogrid4 ./autogrid4
-
-# download and install mgltools
-ADD https://ccsb.scripps.edu/mgltools/download/491/ ./
-RUN tar xzf mgltools_x86_64Linux2_1.5.7p1.tar.gz \
-    && mv mgltools_x86_64Linux2_1.5.7/ mgltools/ \
-    && cd mgltools/ \
-    && ./install.sh
-RUN rm mgltools_x86_64Linux2_1.5.7p1.tar.gz
 
 ADD scripts/ ./scripts/
