--- a/docker/Dockerfile.IntelCPUOpenCL
+++ b/docker/Dockerfile.IntelCPUOpenCL
@@ -7,7 +7,7 @@ RUN apt-get update && apt-get install -y wget opencl-headers build-essential
 RUN wget -O- https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB \
     | gpg --dearmor > /usr/share/keyrings/oneapi-archive-keyring.gpg \
     && echo "deb [signed-by=/usr/share/keyrings/oneapi-archive-keyring.gpg] https://apt.repos.intel.com/oneapi all main" > /etc/apt/sources.list.d/oneAPI.list \
-    && apt-get update && apt-get install -y intel-oneapi-runtime-compilers intel-oneapi-runtime-opencl
+    && apt-get update && apt-get install -y intel-oneapi-runtime-compilers-2024 intel-oneapi-runtime-opencl-2024
 
 # download AutoDock4 (for autogrid4)
 ADD https://autodock.scripps.edu/wp-content/uploads/sites/56/2021/10/autodocksuite-4.2.6-x86_64Linux2.tar ./
@@ -21,22 +21,21 @@ RUN \
     && make DEVICE=CPU NUMWI=64
 
 FROM debian:stable-slim 
-RUN apt-get update && apt-get install -y wget ca-certificates openbabel
+RUN apt-get update && apt-get install -y wget ca-certificates openbabel autogrid
 
 COPY --from=builder /usr/share/keyrings/oneapi-archive-keyring.gpg /usr/share/keyrings/oneapi-archive-keyring.gpg 
 COPY --from=builder /etc/apt/sources.list.d/oneAPI.list /etc/apt/sources.list.d/oneAPI.list
-RUN apt-get update && apt-get install -y intel-oneapi-runtime-compilers intel-oneapi-runtime-opencl
+RUN apt-get update && apt-get install -y intel-oneapi-runtime-compilers-2024 intel-oneapi-runtime-opencl-2024
+
+# download and install mgltools
+WORKDIR /autodock/mgltools/
+ADD https://ccsb.scripps.edu/mgltools/download/491/ ./mgltools.tar.gz
+RUN \
+     tar xzOf mgltools.tar.gz mgltools_x86_64Linux2_1.5.7/MGLToolsPckgs.tar.gz | tar xz \
+     && rm mgltools.tar.gz
 
 WORKDIR /autodock/
 COPY --from=builder /autodock/AutoDock-GPU-1.5.3/bin/autodock_cpu_64wi ./autodock_gpu
 COPY --from=builder /autodock/x86_64Linux2/autogrid4 ./autogrid4
-
-# download and install mgltools
-ADD https://ccsb.scripps.edu/mgltools/download/491/ ./
-RUN tar xzf mgltools_x86_64Linux2_1.5.7p1.tar.gz \
-    && mv mgltools_x86_64Linux2_1.5.7/ mgltools/ \
-    && cd mgltools/ \
-    && ./install.sh
-RUN rm mgltools_x86_64Linux2_1.5.7p1.tar.gz
 
 ADD scripts/ ./scripts/
